Added style to the navbar

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,3 +19,29 @@
   top: 55px;
   right: 12px;
 }
+/* App.css */
+
+.navbar {
+  background-color: #333;
+  padding: 10px;
+}
+
+.navbar ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.navbar li {
+  margin-right: 20px;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar a.active {
+  font-weight: bold;
+  border-bottom: 2px solid white;
+}
