Modify nav bar styling

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,11 @@
 .body{
-  padding: 0px 24px;
+  padding: 0px ;
 }
 .App-header {
   background-color: #222;
   height: 70px;
   padding: 20px;
   color: white;
-  margin-bottom: 20px;
 }
 
 .App-title {
@@ -24,6 +23,7 @@
 .navbar {
   background-color: #333;
   padding: 10px;
+  margin-bottom: 20px;
 }
 
 .navbar ul {
